--- a/jms-test/pom.xml
+++ b/jms-test/pom.xml
@@ -41,8 +41,18 @@
 			<version>3.2.9.RELEASE</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jms</artifactId>
+			<version>3.2.9.RELEASE</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.activemq</groupId>
 			<artifactId>activemq-core</artifactId>
+			<version>5.7.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.activemq</groupId>
+			<artifactId>activemq-pool</artifactId>
 			<version>5.7.0</version>
 		</dependency>
 		<dependency>
@@ -50,5 +60,6 @@
 			<artifactId>servlet-api</artifactId>
 			<version>2.5</version>
 		</dependency>
+
 	</dependencies>
 </project>
