--- a/jms-publisher-test/.settings/org.eclipse.core.resources.prefs
+++ b/jms-publisher-test/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
 encoding//src/main/resources=UTF-8
+encoding//src/main/webapp/consumer.jsp=UTF-8
+encoding//src/main/webapp/sender.jsp=UTF-8
 encoding/<project>=UTF-8
