--- a/jms-test/pom.xml
+++ b/jms-test/pom.xml
@@ -45,16 +45,19 @@
 			<artifactId>spring-jms</artifactId>
 			<version>3.2.9.RELEASE</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.apache.activemq</groupId>
-			<artifactId>activemq-core</artifactId>
+			<artifactId>activemq-all</artifactId>
 			<version>5.7.0</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.apache.activemq</groupId>
 			<artifactId>activemq-pool</artifactId>
 			<version>5.7.0</version>
 		</dependency>
+
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
